add Person entity

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://ec2-54-216-185-51.eu-west-1.compute.amazonaws.com:5432/d5f3i4o1qo2khe
 spring.datasource.username=jquvbkyoogrbjx
