--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<version>2.4.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jdbc</artifactId>
 		</dependency>
 		<dependency>
@@ -55,6 +60,7 @@
 						</exclude>
 					</excludes>
 				</configuration>
+				<version>2.4.4</version>
 			</plugin>
 		</plugins>
 	</build>
