--- a/pom.xml
+++ b/pom.xml
@@ -50,9 +50,12 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.8.1</version>
 				<configuration>
+					<source>11</source>
+					<target>11</target>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
@@ -60,7 +63,6 @@
 						</exclude>
 					</excludes>
 				</configuration>
-				<version>2.4.4</version>
 			</plugin>
 		</plugins>
 	</build>
