--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,7 @@ spring.datasource.initialize=true
 # only for scheme initialization at the start of the application - we dont need this, because we use network database
 #spring.datasource.schema=classpath:/schema.sql
 spring.datasource.continue-on-error=true
+
+server.error.whitelabel.enabled=false
+server.error.path=/error
+
